# edgeSLAM

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/Examples/Monocular/: map_conveyance.cc  map_loader.cc  mapoptimizer.cc  mono_euroc.cc  relocalizer.cc
client/include/: Client.h  DataSetUtil.h  KeyFrame.h  Map.h  MapDrawer.h  MapElementUpdate.h  MapManager.h  MapPoint.h  MapSlice.h  MapUpdater.h  ORBmatcher.h  Optimizer.h  System.h  Timer.h  Tracking.h
client/src/: Client.cc  DataSetUtil.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapManager.cc  MapPoint.cc  MapSlice.cc  MapUpdater.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  System.cc  Timer.cc  Tracking.cc  Viewer.cc
config/: config.yaml
include/: BoostArchiver.h  CLogger.h  GRPCConfig.h  Property.h  Signal.h
server/: CMakeLists.txt
server/Examples/Monocular/: mono_euroc.cc
server/include/: GlobalInstance.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  Optimizer.h  System.h  Tracking.h
server/src/: GlobalInstance.cpp  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  Optimizer.cc  System.cc  Tracking.cc
